# dx-chat

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  tailwind.css
assets/: tailwind.css
src/: main.rs
src/components/: mod.rs
src/views/: chat.rs  home.rs  mod.rs  navbar.rs
